<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.csaper6.alarmclock.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/button_save"
            android:layout_gravity="right"
            android:drawablePadding="4dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/button_cancel"
            android:layout_gravity="left"
            android:drawablePadding="4dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_sounds"
            android:id="@+id/button_alarmSounds"
            android:layout_gravity="center" />
    </FrameLayout>

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:layout_marginLeft="-30dp"
        android:layout_marginRight="-30dp"
        android:layout_marginBottom="-30dp"
        android:layout_marginTop="-10dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/timePicker"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s"
            android:id="@+id/switch_sun"
            android:layout_alignBottom="@+id/switch_mon"
            android:layout_alignEnd="@+id/timePicker"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m"
            android:id="@+id/switch_mon"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/switch_mon"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tu"
            android:id="@+id/switch_tues"
            android:layout_alignBottom="@+id/switch_mon"
            android:layout_centerHorizontal="true"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w"
            android:id="@+id/switch_wed"
            android:layout_below="@+id/switch_mon"
            android:layout_alignEnd="@+id/switch_sun"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/th"
            android:id="@+id/switch_thurs"
            android:layout_alignBottom="@+id/timePicker"
            android:layout_toStartOf="@+id/switch_tues"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f"
            android:id="@+id/switch_fri"
            android:layout_alignBottom="@+id/timePicker"
            android:layout_toStartOf="@+id/switch_tues"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sun"
            android:id="@+id/switch_sat"
            android:layout_alignBottom="@+id/timePicker"
            android:layout_toStartOf="@+id/switch_tues"/>

    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weekly"
        android:id="@+id/checkBox_weekly"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:checked="false" />

</LinearLayout>
